[tool.poetry]
name = "cleaner"
version = "0.1.0"
description = "Simple discord bot for cleaning messages"
authors = ["itsTurnip <22935812+itsTurnip@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
